fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ a{
   transform: translateX(-50%);
   position: relative;
   left: 50%;
-  margin-top: 5em;
+  margin-top: 2em;
   font-size: 1em;
 }
 .masthead__arrow a {
